@@ -1,0 +1,131 @@
+<sect1 id="config-background">
+  <title>Background</title>
+  <para>
+    The background is the picture, pattern, or color shown on your
+    desktop.  A lot of people use this as decoration on their
+    computer.  The <application>Background Properties</application>
+    program configures your background settings.
+  </para>
+  <para>
+    Accessing the <application>Background Properties</application> can
+    be done two ways:
+    <itemizedlist>
+      <listitem>
+        <para>
+	  Right clicking on the background and left-clicking on
+	  <guibutton>Change Desktop Background</guibutton>.
+	</para>
+      </listitem>
+      <listitem>
+        <para>
+	  Opening the <application>Gnome Control Center</application>
+	  and double-clicking <guibutton>Background</guibutton>.
+	</para>
+      </listitem>
+    </itemizedlist>
+  </para>
+  <sect2 id="config-background-interface">
+    <title>The Background Properties Interface</title>
+    <para>
+      The top of the window shows you a small version of the selected
+      background.  Below are boxes which let you select what mode your
+      background uses:
+      <variablelist>
+	<varlistentry>
+	  <term>Wallpaper</term>
+	  <listitem>
+	    <para>
+	      Displays your wallpaper in its native form.  You should
+	      choose this if your wallpaper is of the exact dimensions
+	      of your screen resolution.
+	    </para>
+	  </listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term>Centered</term>
+	  <listitem>
+	    <para>
+	      Places your image directly in the center of your screen.
+	    </para>
+	  </listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term>Scaled</term>
+	  <listitem>
+	    <para>
+	      Stretches your image, but keeps the aspect ratio.  This
+	      will keep your image from looking funny because it has
+	      been stretched too much in one direction.
+	    </para>
+	  </listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term>Stretched</term>
+	  <listitem>
+	    <para>
+	      Streches your image to fill your screen, regardless of
+	      aspect ratio.  This could distort your images.
+	    </para>
+	  </listitem>
+	</varlistentry>
+	<varlistentry>
+	  <term>No Picture</term>
+	  <listitem>
+	    <para>
+	      Doesn't use a graphic as the background, but uses colors
+	      which are covered below.
+	    </para>
+	  </listitem>
+	</varlistentry>
+      </variablelist>
+    </para>
+    <para>
+      Below the said buttons are options to configure the colors.
+      These only matter if you selected <guibutton>No
+      Picture</guibutton> or your image doesn't fill the whole
+      screen.
+    </para>
+    <para>
+      If your image doesn't take up the entire screen, you have the
+      option of how to color the outside of it.  You can either choose
+      a vertical gradient, horizontal gradient, or a standard solid
+      color.  If you choose a solid color, you select the color at
+      right by clicking on <guibutton>Color</guibutton>.  If you pick
+      a gradient, you will have two options.  Select the colors you
+      wish to do and your options will be made automatically.  
+    </para>
+  </sect2>
+  <sect2 id="config-background-settingup">
+    <title>Setting Up a Background</title>
+    <para>
+      To configure a backgrond, choose one of the following steps:
+      <orderedlist numeration="arabic">
+	<listitem>
+	  <para>
+	    Drag and drop an image into the <guibutton>Picture
+	    Box</guibutton> or click the button and select the image
+	    through the <application>Gnome File Selector</application>.
+	  </para>
+	</listitem>
+	<listitem>
+	  <para>
+	    Select the mode which you wish to use.  Changes are
+	    applied automatically, so you can change quickly if you
+	    aren't pleased with the results.
+	  </para>
+	</listitem>
+	<listitem>
+	  <para>
+	    If your image doesn't cover the entire monitor, select
+	    your color settings.  Otherwise, you can skip this step.
+	  </para>
+	</listitem>
+	<listitem>
+	  <para>
+	    Click <guibutton>Close</guibutton> when through with your configuration.
+	  </para>
+	</listitem>
+      </orderedlist>	
+    </para>
+  </sect2>
+</sect1>
