@@ -11,6 +11,7 @@
 <!ENTITY CONFIG-SCREENSAVER SYSTEM "config-screensaver.xml">
 <!ENTITY CONFIG-BEHAVIOR SYSTEM "config-behavior.xml">
 <!ENTITY CONFIG-CD SYSTEM "config-cds.xml">
+<!ENTITY CONFIG-BACKGROUND SYSTEM "config-background.xml">
 ]>
 
 <article id="index" lang="en">
@@ -143,7 +144,7 @@
       the new user.  These include:
       <variablelist>
 	<varlistentry>
-	  <term>Background</term>
+	  <term><xref linkend="config-background" /></term>
 	  <listitem>
 	    <para>
 	      Configures the background image on your desktop.
@@ -365,4 +366,5 @@
 &CONFIG-SCREENSAVER;
 &CONFIG-BEHAVIOR;
 &CONFIG-CD;
+&CONFIG-BACKGROUND;
 </article>
