@@ -1,3 +1,9 @@
+2002-03-22  Kevin Breit  <mrproper@ximian.com>
+
+	* C/control-center.xml: Hooked the background stuff into this file.  It builds properly. 
+
+	* C/config-background.xml: Created the file.
+
 2002-03-21  Kevin Breit  <mrproper@ximian.com>
 
 	* C/control-center.xml: Updated the file with the latest order and amount of things.
